# wdm_transform

./: .gitignore  .gitmodules  CHANGELOG.md  MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  test_unitary.py  test_unitary2.py
.github/workflows/: docs.yml  pypi.yml  tests.yml
docs/: benchmarks.ipynb  benchmarks.md  dev-notes.md  index.md  mkdocs.yml
docs/_static/: bench_fft.py  benchmark_data.csv  benchmark_fft_data.csv  benchmark_results.json
docs/_static/lisa_freq_mcmc_assets/: posteriors.npz
docs/_static/lisa_wdm_mcmc_assets/: noise_var_calibration_nt128_nf1024.npz  posteriors.npz  wdm_posterior_samples.npz
docs/examples/: generate_benchmark_plot.py  generate_wdm_assets.py  wdm_walkthrough.py
docs/guide/: api-overview.md  package-layout.md  reconstruction-and-inference.md  what-is-wdm.md  windows-and-atoms.md
docs/javascripts/: mathjax.js
docs/reference/: api.md
docs/studies/: .gitignore  notes.txt  wdm_deglitching_with_thresholding.py  wdm_monochromatic_gibbs.py  wdm_monochromatic_signal_with_gap.py  wdm_sinusoid_in_colored_noise.py  wdm_time_varying_psd.py
docs/studies/benchmarks/: colab_benchmarks.ipynb  colab_benchmarks.py
docs/studies/lisa/: README.md  check_wdm_lnl.py  collect_jsd.py  compare_mcmc_results.py  data_generation.py  demo_wdm_nonstationary_whitening.py  evaluate_lnl.py  evaluate_lnl_scales.py  gb_prior.py  generate_all.sh  infographic.py  lisa_common.py  lisa_demo.md  lisa_freq_diagnostic.py  lisa_freq_diagnostics.py  lisa_freq_mcmc.py  lisa_mcmc.py  lisa_wdm_mcmc.py  patch_freq.py  post_proc.py  pp_freq.slurm  pp_plot.py  pp_runner.slurm  pp_wdm.slurm  prior_diagnostics.py  requirements.txt  run.sh  study_galactic_covariance.py  test_lisa_normalization.py  test_whittle.py
docs/studies/toymodels/: deglitching.md  deglitching.py  monochrome_gaps.md  monochrome_gaps.py  monochrome_stationary_psd.md  monochrome_stationary_psd.py  monochrome_tv_psd.md  monochrome_tv_psd.py  run_all.sh  tv_psd.md  tv_psd.py
docs/studies/toymodels/outdir_deglitching/: run_log.txt
docs/studies/toymodels/outdir_monochrome_gaps/: run_log.txt
docs/studies/toymodels/outdir_monochrome_stationary_psd/: run_log.txt
docs/studies/toymodels/outdir_monochrome_tv_psd/: run_log.txt
docs/studies/toymodels/outdir_tv_psd/: run_log.txt
docs/stylesheets/: extra.css
src/wdm_transform/: __init__.py  benchmarking.py  freqseries.py  plotting.py  precision.py  signal_processing.py  timeseries.py  wdm.py  windows.py
src/wdm_transform/backends/: __init__.py  base.py  cupy_backend.py  jax_backend.py  numpy_backend.py
src/wdm_transform/datatypes/: __init__.py  series.py  wdm.py
src/wdm_transform/transforms/: __init__.py  _subband.py  jax_backend.py  jax_subband.py  xp_backend.py  xp_subband.py
tests/: conftest.py  test_api_helpers.py  test_benchmarking.py  test_docs.py  test_jax_backend.py  test_roundtrip.py  test_signal_processing.py  test_snr_consistency.py  test_subband.py  test_validation.py
